# cora_burn

./: Cargo.toml  call_stack.txt
cora_gnn/: Cargo.toml
cora_gnn/src/: graph.rs  main.rs
cora_gnn/src/graph/: data.rs  dataset.rs  model.rs  train.rs
tools/: Cargo.toml
tools/src/: main.rs
