[package]
name = "cora_gnn"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = {version = "0.15.0", features = ["wgpu", "train", "vision"] }
rayon = { version = "1.10.0"}
#criterion = "0.5.1"
bincode = "1.3.3"

#[dev-dependencies]
#criterion = "0.5.1"
#
#[[bench]]
#name = "benchmark"
#harness = false